# test_task_for_mera_capital

./: Makefile  README.md  alembic.ini  pyproject.toml
app/: __main__.py
app/api/: __init__.py  factory.py
app/api/routes/: coin.py
app/common/config/: config_loader.py  logging_config.py  main.py
app/core/interfaces/: client_protocol.py  db_provaider_protocol.py
app/core/models/dto/: __init__.py  btc.py  eth.py  index.py
app/core/models/enums/: tickers.py
app/core/services/: coin.py  query.py
app/infrastructure/api/: __init__.py  factory.py
app/infrastructure/api/providers/: __init__.py  db.py
app/infrastructure/api/routes/: coin.py
app/infrastructure/client/: api.py  base_client.py  client.py  urls.py
app/infrastructure/db/: __init__.py  config.py  factory.py
app/infrastructure/db/dao/: holder.py
app/infrastructure/db/dao/rdb/: __init__.py  base.py  btc.py  coin.py  eth.py  ticker.py
app/infrastructure/db/migrations/: env.py
app/infrastructure/db/migrations/versions/: 22a95eaa0067_1.py  25a38b6e2f87_.py  275d339c6610_.py  533c458359e3_.py  6bc5d5a34512_.py  773ed70e56d3_1.py  898e439265a3_.py  (+5 more)
app/infrastructure/db/models/: __init__.py  base.py  btc.py  coin.py  eth.py  ticker.py
app/infrastructure/scheduler/: __init__.py  context.py  factory.py  scheduler.py  wrappers.py
app/tests/integration/client/: conftest.py  test_get_index_price.py
config/: config.yml  logging.yml
config_dist/: config.yml  logging.yml
tests/fixtures/: cli.py
tests/integration/client/: conftest.py  test_get_index_price.py
tests/mocks/: client_mocks.py
