[tool.poetry]
name = "test-task-for-mera-capital"
version = "0.1.0"
description = ""
authors = ["Yurii <yankovyurii@yandex.ru>"]
readme = "README.md"
packages = [{include = "test_task_for_mera_capital"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
pyyaml = "^6.0"
adaptix = "^3.0.0a4"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
websockets = "^11.0.3"
certifi = "^2023.5.7"
apscheduler = "^3.10.1"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
colorlog = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
